--- a/instructors.html
+++ b/instructors.html
@@ -68,7 +68,7 @@
 
 
     <!--Harpreet Singh-->
-    <section id="about" style="padding: 0;">
+    <section id="about" >
         <div class="container">
             <div class="row justify-content-between align-items-center">
                 <div class="col-lg-7" data-aos="fade-down" data-aos-delay="50">
@@ -86,18 +86,18 @@
                             <div class="carousel-inner">
                                 <div class="carousel-item active">
                                     <h1 id="detes-spec">Professional Experience</h1>
-                                    <h4>with hands-on expertise in tech</h4>
-                                    <h2>Tech guru with a Global impact, Harpreet has shaped future leaders across India, the US, and the UK. Always ahead of the industry, he's the Mentor you need!</h2>
+                                    <h4 class="text-center">with hands-on expertise in tech</h4>
+                                    <h2 class="text-center" style="padding: 0 80px;">Tech guru with a Global impact, Harpreet has shaped future leaders across India, the US, and the UK. Always ahead of the industry, he's the Mentor you need!</h2>
                                 </div>
                                 <div class="carousel-item">
                                     <h1 id="detes-spec">Career Highlights</h1>
-                                    <h4>and key achievements in IT</h4>
-                                    <h2>AICTE Advisor, expert mentor, and a highly respected leader in the tech education space, dedicated to shaping the next Generation of tech professionals.</h2>
+                                    <h4 class="text-center">and key achievements in IT</h4>
+                                    <h2 class="text-center" style="padding: 0 80px;">AICTE Advisor, expert mentor, and a highly respected leader in the tech education space, dedicated to shaping the next Generation of tech professionals.</h2>
                                 </div>
                                 <div class="carousel-item">
                                     <h1 id="detes-spec">Instructor Fun Facts</h1>
-                                    <h4>with humorous jokes</h4>
-                                    <h2>When he's not shaping tech careers, Harpreet enjoys a good cup of coffee, pondering the mysteries of the universe... or maybe just enjoying a good book.</h2>
+                                    <h4 class="text-center">with humorous jokes</h4>
+                                    <h2 class="text-center" style="padding: 0 80px;"> When he's not shaping tech careers, Harpreet enjoys a good cup of coffee, pondering the mysteries of the universe... or maybe just enjoying a good book.</h2>
                                 </div>
                             </div>
                             <div class="button-container">
@@ -146,19 +146,18 @@
                             <div class="carousel-inner">
                                 <div class="carousel-item active">
                                     <h1 id="detes-spec">Professional Experience</h1>
-                                    <h4>combined with practical expertise in tech</h4>
-                                    <h2>Tech guru with a Global impact, Harpreet has shaped future leaders across India, the US, and the UK. 
-                                        Always ahead of the industry, he's the Mentor you need!</h2>
+                                    <h4 class="text-center">combined with practical expertise in tech</h4>
+                                    <h2 class="text-center" style="padding: 0 80px;">Deepak is a seasoned professional specializing in architecture and performance optimization, with a proven track record of driving efficiency and scalability in complex systems.</h2>
                                 </div>
                                 <div class="carousel-item">
                                     <h1 id="detes-spec">Career Highlights</h1>
-                                <h4>and milestones across the years</h4>
-                                <h2>With 14+ years in tech, Deepak specializes in  architecture and performance optimization. And yes, he's probably already optimizing this page.</h2>
+                                <h4 class="text-center">and milestones across the years</h4>
+                                <h2 class="text-center" style="padding: 0 80px;">With 14+ years in tech, Deepak specializes in  architecture and performance optimization. And yes, he's probably already optimizing this page.</h2>
                                 </div>
                                 <div class="carousel-item">
                                     <h1 id="detes-spec">Instructor Fun Facts</h1>
-                                <h4>and their humorous talks</h4>
-                                <h2> Outside the classroom, Deepak loves hikings, experimenting with new cloud technologies, and winning at DevOps Quiz</h2>
+                                <h4 class="text-center">and their humorous talks</h4>
+                                <h2 class="text-center" style="padding: 0 80px;"> Outside the classroom, Deepak loves hikings, experimenting with new cloud technologies, and winning at DevOps and cloud terminology Quiz</h2>
                                 </div>
                             </div>
                             <div class="button-container">
