--- a/dashboard/profile.html
+++ b/dashboard/profile.html
@@ -5,60 +5,133 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Edit Profile</title>
   <script src="https://cdn.tailwindcss.com"></script>
-  <script>
-    function showTab(tabId) {
-      ['basic', 'summary', 'career'].forEach(id => {
-        document.getElementById(id).classList.add('hidden');
-        document.getElementById('tab-' + id).classList.remove('border-b-2', 'border-yellow-500', 'text-yellow-600');
-      });
-      document.getElementById(tabId).classList.remove('hidden');
-      document.getElementById('tab-' + tabId).classList.add('border-b-2', 'border-yellow-500', 'text-yellow-600');
-    }
-  </script>
 </head>
-<body class="bg-yellow-50 font-sans p-4">
-  <div class="max-w-4xl mx-auto bg-white shadow-md rounded-lg overflow-hidden">
-    <header class="bg-yellow-100 p-4 text-center font-bold text-xl">
-      Edit Profile
-    </header>
-    <div class="flex flex-col md:flex-row">
-      <aside class="bg-yellow-200 p-6 w-full md:w-1/3 text-center">
-        <img src="" class="mx-auto rounded-full mb-4" />
-        <h2 class="font-semibold">Aryan Trimbakkar</h2>
-        <p class="text-sm text-gray-600">aryan.trimbakkar@yellowgap.com</p>
-      </aside>
-      <main class="w-full md:w-2/3 p-6">
-        <div class="flex space-x-4 border-b mb-4 text-sm">
-          <button id="tab-basic" onclick="showTab('basic')" class="pb-2 border-b-2 border-yellow-500 text-yellow-600">Basic Details</button>
-          <button id="tab-summary" onclick="showTab('summary')" class="pb-2">Summary</button>
-          <button id="tab-career" onclick="showTab('career')" class="pb-2">Career Journey</button>
-        </div>
-        <div id="basic">
-          <h3 class="font-semibold mb-2">Personal Details</h3>
-          <div class="grid grid-cols-1 gap-4">
-            <input class="p-2 border rounded" placeholder="Full Name" />
-            <input class="p-2 border rounded" placeholder="Email" />
-            <input class="p-2 border rounded" placeholder="Phone Number" />
-            <input class="p-2 border rounded" placeholder="LinkedIn URL" />
-          </div>
-        </div>
-        <div id="summary" class="hidden">
-          <h3 class="font-semibold mb-2">Summary</h3>
-          <textarea class="w-full p-2 border rounded" placeholder="Tell us who you are"></textarea>
-        </div>
-        <div id="career" class="hidden">
-          <h3 class="font-semibold mb-2">Career Journey</h3>
-          <select class="p-2 border rounded w-full mb-2">
-            <option>Education</option>
-          </select>
-          <input class="p-2 border rounded w-full" placeholder="Add milestone" />
-        </div>
-        <div class="mt-4 flex justify-end space-x-2">
-          <button class="px-4 py-2 bg-gray-200 rounded">Cancel</button>
-          <button class="px-4 py-2 bg-yellow-500 text-white rounded">Save</button>
-        </div>
-      </main>
+<body class="bg-yellow-50 min-h-screen font-sans">
+
+  <div class="bg-white shadow p-4 flex items-center justify-between">
+    <h1 class="text-2xl font-semibold flex items-center gap-2"> Edit Profile</h1>
+    <div class="flex items-center gap-4">
+      <div class="flex items-center gap-2">
+        <span></span>
+        <label class="switch">
+          <input type="checkbox" class="hidden" />
+          <span class="w-10 h-5 bg-gray-300 rounded-full block"></span>
+        </label>
+        <span></span>
+      </div>
+      <button class="text-xl"></button>
+      <img src="" class="w-10 h-10 rounded-full" alt="Profile" />
     </div>
   </div>
+
+
+  <div class="bg-white px-6 pt-4 border-b border-gray-200">
+    <nav class="flex gap-8">
+      <button onclick="showTab('basic')" class="tab-button text-yellow-600 font-semibold border-b-2 border-yellow-600 pb-2" id="tab-basic">Basic Details</button>
+      <button onclick="showTab('summary')" class="tab-button text-gray-600 hover:text-yellow-600" id="tab-summary">Summary</button>
+      <button onclick="showTab('career')" class="tab-button text-gray-600 hover:text-yellow-600" id="tab-career">Career Journey</button>
+    </nav>
+  </div>
+
+
+  <div class="flex p-6 gap-6">
+
+    <div class="bg-white rounded-xl shadow p-6 w-1/4 text-center">
+      <img src="" alt="Avatar" class="mx-auto w-24 h-24 mb-4">
+      <h2 class="text-lg font-semibold">Aryan Trimbakkar</h2>
+      <p class="text-gray-500 text-sm mb-4">aryan.trimbakkar@yellowgap.com</p>
+      <h3 class="text-yellow-600 font-bold mb-1">About</h3>
+      <p class="text-gray-600 text-sm">I'm Aryan. Business Developer. I enjoy creating user-centric, delightful and human experiences.</p>
+    </div>
+
+   
+    <div class="bg-white rounded-xl shadow p-6 w-3/4">
+
+      <div id="section-basic">
+        <h2 class="text-lg font-semibold mb-4">Personal Details</h2>
+        <form class="grid grid-cols-2 gap-4">
+          <input type="text" placeholder="Enter full name" class="col-span-1 border border-gray-300 p-2 rounded" />
+          <input type="email" placeholder="Enter email address" class="col-span-1 border border-gray-300 p-2 rounded" />
+          <input type="text" placeholder="Enter phone number" class="col-span-1 border border-gray-300 p-2 rounded" />
+          <input type="text" placeholder="Enter LinkedIn URL" class="col-span-1 border border-gray-300 p-2 rounded" />
+
+          <input type="text" value="4A1, 201, Gokuldham Society" class="col-span-1 border border-gray-300 p-2 rounded" />
+          <input type="text" value="Panchvilas, near Ashapura bus stop" class="col-span-1 border border-gray-300 p-2 rounded" />
+          <input type="text" value="Khandheshwar, Navi Mumbai" class="col-span-1 border border-gray-300 p-2 rounded" />
+          <input type="text" placeholder="Pin code" class="col-span-1 border border-gray-300 p-2 rounded" />
+          <input type="text" placeholder="Enter State" class="col-span-1 border border-gray-300 p-2 rounded" />
+
+          <div class="col-span-2 flex justify-end gap-4 mt-4">
+            <button type="button" class="px-4 py-2 bg-gray-300 rounded text-gray-800">Cancel</button>
+            <button type="submit" class="px-4 py-2 bg-yellow-600 text-white rounded hover:bg-yellow-700">Save</button>
+          </div>
+        </form>
+      </div>
+
+   
+      <div id="section-summary" class="hidden">
+        <h2 class="text-lg font-semibold mb-4">Give us a summary about yourself</h2>
+        <form class="space-y-4">
+          <input type="text" placeholder="Tell us who you are" class="w-full border border-gray-300 p-2 rounded" />
+          <input type="text" placeholder="Enter skills separated by commas" class="w-full border border-gray-300 p-2 rounded" />
+          <input type="text" placeholder="Enter comma separated areas of interest" class="w-full border border-gray-300 p-2 rounded" />
+          <input type="text" placeholder="Enter coding language separated by commas" class="w-full border border-gray-300 p-2 rounded" />
+          <input type="text" placeholder="What do you want to achieve in 5 years" class="w-full border border-gray-300 p-2 rounded" />
+          <div class="flex justify-end gap-4 mt-4">
+            <button type="button" class="px-4 py-2 bg-gray-300 rounded text-gray-800">Cancel</button>
+            <button type="submit" class="px-4 py-2 bg-yellow-600 text-white rounded hover:bg-yellow-700">Save</button>
+          </div>
+        </form>
+      </div>
+
+ 
+      <div id="section-career" class="hidden">
+        <h2 class="text-lg font-semibold mb-4">Tell us about your journey - where you started and where you are now?</h2>
+        <form class="space-y-4">
+          <div>
+            <select class="w-full border border-gray-300 p-2 rounded">
+              <option selected>Education</option>
+              <option>High School</option>
+              <option>Bachelor's Degree</option>
+              <option>Master's Degree</option>
+            </select>
+            <a href="#" class="text-blue-600 text-sm mt-1 inline-block">Add educational details +</a>
+          </div>
+
+          <div>
+            <label class="block mb-1 font-medium text-sm">Professional milestones</label>
+            <div class="flex items-center gap-2">
+              <input type="text" placeholder="Add milestone" class="w-full border border-gray-300 p-2 rounded" />
+              <button type="button" class="text-xl"></button>
+            </div>
+          </div>
+
+          <div class="flex justify-end gap-4 mt-4">
+            <button type="button" class="px-4 py-2 bg-gray-300 rounded text-gray-800">Cancel</button>
+            <button type="submit" class="px-4 py-2 bg-yellow-600 text-white rounded hover:bg-yellow-700">Save</button>
+          </div>
+        </form>
+      </div>
+
+    </div>
+  </div>
+
+
+  <script>
+    function showTab(tab) {
+      const tabs = ['basic', 'summary', 'career'];
+      tabs.forEach(t => {
+        document.getElementById(`section-${t}`).classList.add('hidden');
+        document.getElementById(`tab-${t}`).classList.remove('text-yellow-600', 'font-semibold', 'border-b-2', 'border-yellow-600', 'pb-2'); //
+        document.getElementById(`tab-${t}`).classList.add('text-gray-600');
+      }); //becomes normal !!
+
+      document.getElementById(`section-${tab}`).classList.remove('hidden');
+      document.getElementById(`tab-${tab}`).classList.add('text-yellow-600', 'font-semibold', 'border-b-2', 'border-yellow-600', 'pb-2'); 
+    } //upon selection.
+
+    showTab('basic');  // Show the basic tab by default
+  </script>
+
 </body>
 </html>
